<resources>
    <string name="app_name">Hop</string>
    <string name="empty_beer_list"> </string>
    <string name="app_icon">Icon of the app</string>
    <string name="icon">Label of the beer</string>
    <string name="sample_beer_name">\"Galactic Wrath\" IPA</string>
    <string name="sample_IBU">IBU: 45</string>
    <string name="sample_brewery_name">Stony Creek Beer</string>
    <string name="sample_beer_style_name">American IPA</string>
    <string name="sample_creation_date">Tue Jan 11 2011</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_wine">AddWineActivity</string>


    <string name="abc_an_amazing_alphabet_book">ABC: An Amazing Alphabet Book!</string>

    <string name="are_you_my_mother">Are You My Mother?</string>
    <string name="where_is_babys_belly_button">Where is Baby\'s Belly Button</string>
    <string name="on_the_night_you_were_born">On The Night You Were Born</string>
    <string name="hand_hand_fingers_thumb">Hand Hand Fingers Thumb</string>
    <string name="the_very_hungry_caterpillar">The Very Hungry Caterpillar</string>
    <string name="the_going_to_bed_book">The Going To-Bed Book</string>
    <string name="oh_baby_go_baby">Oh Baby Go Baby</string>
    <string name="the_tooth_book">The Tooth Book</string>
    <string name="one_fish_two_fish_red_fish_blue_fish">One Fish, Two Fish, Red Fish, Blue Fish</string>

    <string name="dr_seuss">Dr. Seuss</string>
    <string name="karen_katz">Karen Katz</string>
    <string name="nancy_tillman">Nancy Tillman</string>
    <string name="eric_carle">Eric Carle</string>
    <string name="sandra_boynton">Sandra Boynton</string>
</resources>
