<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="?attr/colorPrimary"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:elevation="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                android:elevation="0dp"
                tools:ignore="UnusedAttribute">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/listPreferredItemHeight"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_icon"
                        android:layout_gravity="center"
                        android:scaleType="center"
                        app:layout_scrollFlags="scroll|enterAlways"
                        android:contentDescription="@string/app_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/logo"
                        android:layout_toEndOf="@+id/logo"
                        android:textSize="18sp"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_beer_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <!-- empty list -->
        <TextView
            android:id="@+id/tv_beer_list_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/listPreferredItemHeight"
            app:layout_anchor="@+id/rv_beer_list"
            app:layout_anchorGravity="fill"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/empty_beer_list" />
    </android.support.design.widget.CoordinatorLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiple_actions"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:fab_addButtonColorNormal="#fafafa"
        app:fab_addButtonColorPressed="#f1f1f1"
        app:fab_addButtonPlusIconColor="#808080" >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_search_black_24dp"
            app:fab_colorNormal="#fafafa"
            app:fab_colorPressed="#f1f1f1"
            app:fab_size="normal"
            android:id="@+id/action_search" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_add_black_24dp"
            app:fab_colorNormal="#fafafa"
            app:fab_colorPressed="#f1f1f1"
            app:fab_size="normal"
            android:id="@+id/action_add" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</FrameLayout>