<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hop.LocalBeerInfo">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hop.LoacalBeerInfoFragment">

        <LinearLayout
            android:id="@+id/item_wrapper_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardMaxElevation="1dp"
                app:cardElevation="2dp"
                app:contentPadding="10dp"
                app:contentPaddingBottom="0dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:id="@+id/cardView">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
                    tools:ignore="PrivateResource">

                    <ImageView
                        android:id="@+id/beerImage"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="5dp"
                        android:contentDescription="@string/icon"
                        tools:ignore="PrivateResource"
                        tools:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/beerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/beerImage"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="@string/sample_beer_name" />

                    <TextView
                        android:id="@+id/beerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/beerName"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/beer_text_size"
                        tools:ignore="UnusedAttribute"
                        tools:text="@string/sample_beer_style_name" />

                    <TextView
                        android:id="@+id/beerIBU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/beerStyle"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/beer_text_size"
                        tools:ignore="UnusedAttribute"
                        tools:text="20" />

                    <TextView
                        android:id="@+id/beerABV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/beerIBU"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/beer_text_size"
                        tools:ignore="UnusedAttribute"
                        tools:text="4.5" />

                    <TextView
                        android:id="@+id/beerDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/beerABV"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/beer_text_size"
                        tools:ignore="UnusedAttribute"
                        tools:text="Description" />

                    <Button
                        android:id="@+id/btAddFromBreweryDB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/beerDescription"
                        android:layout_marginTop="20dp"
                        android:text="Add" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </FrameLayout>


</android.support.constraint.ConstraintLayout>
